US1262 - fixing gap in GOV.UK email template

--- a/c3/app/assets/styles/elements/_forms.scss
+++ b/c3/app/assets/styles/elements/_forms.scss
@@ -45,6 +45,9 @@ textarea {
     &.textarea-reduced {
         height: 3em;
     }
+    &.form-control {
+        width: 100%;
+    }
 }
 
 //-----------------------------------------------------------------
